# nvserv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc
build-script/pqxx/: CMakeLists.txt
cmake/: FindH2O.cmake  FindLibUV.cmake  FindLibYAML.cmake  FindWslay.cmake  GrpcProtoHelper.cmake
docs/: dev-dependencies.md  feature_compile.md
examples/hello-world/: CMakeLists.txt
examples/hello-world-grpc/: CMakeLists.txt  main.cc
examples/hello-world-grpc/proto/: order_service.proto
examples/hello-world-grpc/src/: main.cc
examples/hello-world-grpc/src/components/: util_component.h
examples/hello-world-grpc/src/handlers/: handlers.h  order_service_handler.h
examples/hello-world-tcp/: CMakeLists.txt
examples/hello-world-tcp/src/: main.cc
examples/hello-world-tcp/src/components/: util_component.h
examples/hello-world-tcp/src/handlers/: hello_handler.h
examples/hello-world/src/: main.cc
examples/hello-world/src/handlers/: handlers.h  hello_handler.h
src/: .gitignore
src/core/: CMakeLists.txt
src/core/src/nvserv/: declare.h  exceptions.h  global_macro.h
src/core/src/nvserv/components/: component.h  component_base.cc  component_base.h  component_config.h  component_list_base.h  component_locator.h  declare.h  service_base.h
src/core/src/nvserv/headers/: absl_thread.h
src/core/src/nvserv/logs/: declare.h  log.cc  log.h
src/core/src/nvserv/route/: declare.h  route.cc  route.h  router.cc  router.h  router_node.h
src/core/src/nvserv/server/: server_base.h
src/core/src/nvserv/storages/: cluster_config.h  column.h  config.h  connection.h  connection_pool.h  declare.h  exceptions.h  execution_result.h  prepared_statement_manager.h  row_result.h  row_result_iterator.h  storage_server.h  transaction.h
src/core/src/nvserv/utils/: string_utils.h
src/core/tests/: CMakeLists.txt
src/core/tests/src/: route_radix_test.cc
src/grpc/nserv/grpc/handlers/: grpc_service_handler.h  grpc_service_handler_base.h
src/grpc/nvserv/grpc/: grpc_def.h  macro.h
src/grpcl/: CMakeLists.txt
src/grpcl/src/nvserv/grpcl/: def.h  grpcl.h  macro.h
src/grpcl/src/nvserv/handlers/: grpc_service_handler.cc  grpc_service_handler.h
src/grpcl/src/nvserv/server/: grpc_server.h
src/nvrest/: global.h  global_macro.h
src/nvrest/server/: declare.h  http_server.cc  http_server.h  server.h  worker.h  worker_config.h
src/nvrest/server/details/: h2o_impl.h
src/postgres/: CMakeLists.txt
src/postgres/src/nvserv/postgres/: declare.h  pg_server.h
src/postgres/src/nvserv/storages/postgres/: declare.h  pg_cluster_config.h  pg_column.h  pg_connection.h  pg_execution_result.h  pg_helper.h  pg_pool.h  pg_row_result.h  pg_row_result_iterator.h  pg_server.h  pg_transaction.h
src/rest/: CMakeLists.txt
src/rest/src/nvserv/formats/json/: declare.h  value.h  value_builder.h
src/rest/src/nvserv/handlers/: http_basic_handler.h  http_handler_base.h  http_json_handler.h
src/rest/src/nvserv/http/: declare.h  http_config.cc  http_config.h  http_request.cc  http_request.h  http_request_context.h  http_response.cc  http_response.h  http_server.cc  http_server.h  http_server_driver.h  route.cc  route.h  router.cc  router.h  router_node.h
src/rest/src/nvserv/http/details/: h2o_impl.h
src/rest/src/nvserv/http/middleware/: csrf_middleware.cc  csrf_middleware.h  middleware_base.h  middleware_manager.cc  middleware_manager.h
src/rest/tests/: CMakeLists.txt
src/rest/tests/src/: route_radix_test.cc
src/server/: CMakeLists.txt
src/server/src/nvserv/components/: component_list.cc  component_list.h
src/server/src/nvserv/server/: declare.h  main_execution_context.cc  main_execution_context.h  server.h  worker.h  worker_config.h
src/socket/: CMakeLists.txt
src/socket/src/nvserv/handlers/: tcp_client.h  tcp_declare.h  tcp_handler.cc  tcp_handler.h  tcp_handler.h.bak  tcp_server.h
